<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>GammaRay::LauncherWindow</class>
 <widget class="QDialog" name="GammaRay::LauncherWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>748</width>
    <height>482</height>
   </rect>
  </property>
  <property name="windowIcon">
   <iconset resource="../resources/gammaray.qrc">
    <normaloff>:/gammaray/GammaRay-128x128.png</normaloff>:/gammaray/GammaRay-128x128.png</iconset>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QTabWidget" name="tabWidget">
     <property name="currentIndex">
      <number>3</number>
     </property>
     <widget class="GammaRay::AttachDialog" name="attachPage">
      <attribute name="title">
       <string>Attach</string>
      </attribute>
     </widget>
     <widget class="GammaRay::LaunchPage" name="launchPage">
      <attribute name="title">
       <string>Launch</string>
      </attribute>
     </widget>
     <widget class="GammaRay::ConnectPage" name="connectPage">
      <attribute name="title">
       <string>Connect</string>
      </attribute>
     </widget>
     <widget class="GammaRay::SelfTestPage" name="selfTestPage">
      <attribute name="title">
       <string>Self Test</string>
      </attribute>
     </widget>
     <widget class="GammaRay::AboutWidget" name="aboutPage">
      <attribute name="title">
       <string>About</string>
      </attribute>
     </widget>
    </widget>
   </item>
   <item>
    <widget class="QWidget" name="widget" native="true">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <property name="margin">
       <number>0</number>
      </property>
      <item>
       <widget class="GammaRay::PromoLabel" name="promoLabel" native="true"/>
      </item>
      <item>
       <widget class="QDialogButtonBox" name="buttonBox">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="standardButtons">
         <set>QDialogButtonBox::Close|QDialogButtonBox::Help|QDialogButtonBox::Ok</set>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>GammaRay::PromoLabel</class>
   <extends>QWidget</extends>
   <header>promolabel.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>GammaRay::AttachDialog</class>
   <extends>QWidget</extends>
   <header>attachdialog.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>GammaRay::LaunchPage</class>
   <extends>QWidget</extends>
   <header>launchpage.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>GammaRay::SelfTestPage</class>
   <extends>QWidget</extends>
   <header>selftestpage.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>GammaRay::ConnectPage</class>
   <extends>QWidget</extends>
   <header>connectpage.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>GammaRay::AboutWidget</class>
   <extends>QWidget</extends>
   <header location="global">ui/aboutwidget.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources>
  <include location="../resources/gammaray.qrc"/>
 </resources>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>GammaRay::LauncherWindow</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>248</x>
     <y>254</y>
    </hint>
    <hint type="destinationlabel">
     <x>157</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>GammaRay::LauncherWindow</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>316</x>
     <y>260</y>
    </hint>
    <hint type="destinationlabel">
     <x>286</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
